--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <body>
             <img src="IMG_0156-modified.png" alt="Cruiser_in_the_woods" width="500" height="500">
             <h1>Sconey Spaget Industries</h1>
-            <p><em>BMWs Land Cruisers F1<br>Chicken Sando Aficionado<br></em></p>
+            <p><em>BMWs Land Cruisers F1<br>Chicken Sando Aficionados<br></em></p>
             <p>Off-road/Race Track/spicy chicken specialists... Affiliate: <a href="https://www.instagram.com/greenmountaingarage/">Green Mountain Garage</a></p>
             <hr size="3" noshade>
             <h3>The Roster</h3>
