--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h3>Software Development</h3>
         <p class="exp">Self taught python programmer. I have built games and programs using OOP such as a flight deal
             tracker app utilizing APIs and a quiz app that interfaces on a GUI. I also have learned and are familiar with 
-            C, SQL, HTML, CSS, and Javascript</p>
+            C, SQL, HTML, CSS, and Javascript.</p>
     </div>
     <div class="skill-row">
       <img class="car" src="car.png" alt="car">
